# rover-firmware

./: .clippy.toml  Cargo.toml  README.md  renovate.json  shell.nix
.cargo/: config.toml
src/: lib.rs
src/robot/: battery_manager.rs  display_manager.rs  event_loop.rs  events.rs  mod.rs  motors_manager.rs  robot_controller.rs  tb6612fng_driver.rs
src/utils/: channels.rs  mod.rs  mqtt_manager.rs  protocol.rs  topics.rs
