[package]
edition = "2021"
name    = "project-emerge-firmware"
version = "0.1.0"

[[bin]]
name = "project-emerge-firmware"
path = "./src/bin/main.rs"

[dependencies]
defmt = "1.0.1"
esp-bootloader-esp-idf = "0.1.0"
esp-backtrace = { version = "0.17.0", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "defmt",
] }
esp-hal = { version = "=1.0.0-rc.0", features = [
  "defmt",
  "esp32s3",
  "unstable",
] }

embassy-net = { version = "0.7.0", features = [
  "defmt",
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
  "dns"
] }
embassy-futures = "0.1.1"
embassy-sync = { version = "0.6.2", features = [] }
embedded-graphics-core = { version = "0.4.0", features = [
  "defmt",
] }
embedded-graphics = "0.8.1"
embedded-hal = "1.0"
embedded-hal-bus = { version = "0.3.0", features = ["async", "defmt-03"] }
embedded-io = { version = "0.6.1", features = ["defmt-03"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
esp-alloc = { version = "0.8.0", features = ["defmt"] }
heapless = "0.8.0"
mipidsi = "0.9.0"
rtt-target = { version = "0.6.1", features = ["defmt"] }
# for more networking protocol support see https://crates.io/crates/edge-net
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = [
  "defmt",
  "task-arena-size-20480",
] }
embassy-time = { version = "0.4.0", features = ["defmt"] }
esp-hal-embassy = { version = "0.9.0", features = ["defmt", "esp32s3"] }
esp-wifi = { version = "0.15.0", features = [
  "builtin-scheduler",
  "defmt",
  "esp-alloc",
  "esp32s3",
  "smoltcp",
  "wifi",
] }
ina219 = "0.2.0"
smoltcp = { version = "0.12.0", default-features = false, features = [
  "defmt",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
static_cell = { version = "2.1.0", features = ["nightly"] }
tinybmp = "0.6.0"

# rust-mqtt = { version = "0.3.0", features = ["no_std"], default-features = false }
mountain-mqtt = { version = "0.2.0", default-features = false, features = [
  "defmt",
  "embedded-hal-async",
  "embedded-io-async",
] }
mountain-mqtt-embassy = "0.2.0"
serde = { version = "1.0.209", default-features = false, features = ["derive"] }
serde-json-core = "0.6.0"
tb6612fng = "1.0.0"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release.package.esp-wifi]
opt-level = 3

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
